# clinkz

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  README.md  pyproject.toml
.claude/: settings.local.json
docker/: Dockerfile.tools  docker-compose.yml
docs/: adding-tools.md  architecture.md
src/clinkz/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py  state.py
src/clinkz/agents/: __init__.py  base.py  crawl.py  critic.py  exploit.py  recon.py  report.py  scan.py
src/clinkz/comms/: __init__.py  bus.py  message.py  protocol.py
src/clinkz/llm/: __init__.py  anthropic_client.py  base.py  factory.py  gemini_client.py  ollama_client.py  openai_client.py
src/clinkz/models/: __init__.py  finding.py  report.py  scope.py  target.py
src/clinkz/orchestrator/: lifecycle.py  orchestrator.py
src/clinkz/reporting/: __init__.py  generator.py  (+1 more)
tests/fixtures/: httpx_output.jsonl  nikto_output.xml  nmap_sample_output.xml  subfinder_output.txt  test_mcp_server_script.py  wafw00f_output.txt  whatweb_output.json
tests/test_agents/: test_critic.py  test_exploit.py  test_recon.py  test_report.py  test_scan.py
tests/test_comms/: test_bus.py  test_message.py  test_protocol.py
tests/test_integration/: test_agent_nmap.py  test_full_pipeline.py  test_orchestrator_recon.py
tests/test_llm/: test_gemini_client.py
tests/test_orchestrator/: test_lifecycle.py  test_orchestrator.py
tests/test_tools/: test_httpx.py  test_mcp_client.py  test_nikto.py  test_nmap.py  test_resolver.py  test_scope.py  test_subfinder.py  test_wafw00f.py  test_whatweb.py
(+24 files in other folders)
